--- a/keynote.tex
+++ b/keynote.tex
@@ -857,7 +857,7 @@ FCGBP &
 \section{Discussion}
 
 
-\subsection*{The Three Biomarkers in Cancer}
+%\subsection*{The Three Biomarkers in Cancer}
 
 
 %\subsubsection*{The Protein/Pathology Atlas} %still TCGA's RNA-Seq (ok)
@@ -866,10 +866,10 @@ FCGBP &
 %\subsubsection*{Literature Review} % literature (ok)
 
 
-\subsection*{Feature Selection for Survival Modeling} % Even there are many $X_1 ... X_n$ physical and social features of patients available for survival modelling in the TCGA.
+%\subsection*{Feature Selection for Survival Modeling} % Even there are many $X_1 ... X_n$ physical and social features of patients available for survival modelling in the TCGA.
 
 
-\subsection*{The Purpose of Sliding-Window Cutoff Selection}
+%\subsection*{The Purpose of Sliding-Window Cutoff Selection}
 
 
 %\subsection*{Technical Considerations}
@@ -890,10 +890,11 @@ FCGBP &
 %\hfill
     \begin{subfigure}[t]{0.15\textwidth}
     \includegraphics[width=2.5cm]{Rplot20_correlation_TCGA_GSE65858_CoxHR.pdf}
-    \caption{Correlations of Cox's hazard ratios of those 20 significant genes (Pearson's r = 0.68).}
+    \caption{Correlations of Cox's hazard ratios of those 20 significant genes.}% (Pearson's r = 0.68).}
     \end{subfigure}    
 }   
-{    \caption{A head-to-head comparison of Cox's hazard ratios from TCGA HNSCC and GSE65858 datasets.
+{    \caption{A head-to-head comparison of Cox's hazard ratios from the two datasets (moderate correlation, Pearson's r = 0.68).
+%(Pearson's r = 0.68).
 %TCGA HNSCC and GSE65858 cohorts were applied for identification and validation of the candidate biomarkers in HNSCC.
 %    (\textbf{a}) A total of 5404 genes had Cox's hazard ratios from TCGA HNSCC and GSE65858
 %(Pearson's correlation, r = 0.27).
@@ -911,68 +912,127 @@ FCGBP &
 \end{figure}
 
 
-\subsection{Future Directions in Translational Medicine}
+%\subsection{Future Directions in Translational Medicine}
 
 
-\subsubsection*{Proteomics Validation}
+%\subsubsection*{Proteomics Validation}
 
 
-\subsubsection*{Laboratory Validation}
+%\subsubsection*{Laboratory Validation}
 
 
-\subsubsection*{Cancer Type-Agnostic Study}
+%\subsubsection*{Cancer Type-Agnostic Study}
 
 
-\subsubsection{Holistic Cancer Care} 
+\subsection{Holistic Cancer Care} 
 
 \begin{figure}[ht]
 
-\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,center},capbesidewidth=.35\linewidth,capbesidesep=quad}}]{figure}[\FBwidth]
-\centering
+\begin{minipage}[c]{0.60\linewidth}
+%\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,center},capbesidewidth=.25\linewidth,capbesidesep=quad}}]{figure}[\FBwidth]
+%\centering
 
-{\setlength{\unitlength}{.78cm}
-\begin{picture}(15, 20) %(1,0.55038404)%
-\centering
-  \put(0,0){\includegraphics[width=11cm]{Figure_5_holisticCare.pdf}}%
-  \put(1.4, 6.9){\fontfamily{qcr}\selectfont
-  \tiny \textbf{[Physician]}}%
-
-%\includegraphics[width=10cm]{Figure_5_holisticCare.pdf}
+\setlength{\unitlength}{.78cm}
+\begin{picture}(20, 10)(0,0) %(1,0.55038404)%
+%\centering
+  \put(0,0){\includegraphics[width=9.0cm]{Figure_5_holisticCare.pdf}}%
+  \put(0.4, 9.3){\fontfamily{qcr}\selectfont
+  \textbf{[Physician]}}%
+  \put(6.0, 7.8){\fontfamily{qcr}\selectfont
+  HNSCC}
 \end{picture}
-}
-{\caption{The concept of holistic care for \acrshort{hnscc} patients. %MDPI: please confirm if the extra lines and frame need to be deleted.
-Beyond carcinogenesis: In the mind--brain--body axis, a stressful environment (giant \textcolor{black}{black} arrow) will trigger an emotional response. The subconscious mind (brain) releases stress hormones and inflammation signals in response to negative emotions. The  body's internal environment (cells) alters epigenetic control in gene regulation and mRNA expression. Over a long time, the tissue/cells will be transformed into dysplasia and then malignancy (e.g., HNSCC) with help from known carcinogens.
-Cancer care: Holistic care should take care of cancer patients' spiritual, emotional, physical, and socioeconomic needs. Physical care will be carried out by medication therapy or surgery. After establishing a therapeutic relationship (TR), the physicians' spiritual properties (empathy, sympathy, and compassion) will engage cancer patients and recover their self-compassion to gain resilience against the disease through their mind--brain--body axis.
-Thus, we suggest that electric healthcare records (EHR) should include physical, pathological, and psychological data, and even more spiritual information. The \acrshort{tcga} might collect those "holistic features"  (\textcolor{green}{green} dashed line) for further study of personalized medicine.}
-}
+%\includegraphics[width=10cm]{Figure_5_holisticCare.pdf}
+\end{minipage}
+\hfill
+\begin{minipage}[c]{0.35\linewidth}
+%{\caption{
+%The concept of holistic care for \acrshort{hnscc} patients. %MDPI: please confirm if the extra lines and frame need to be deleted.
+
+Beyond carcinogenesis\\
+the mind--brain--body axis
+
+\begin{outline}
+\1 a stressful environment %(giant \textcolor{black}{black} arrow) 
+will trigger an emotional response
+\1 brain releases stress hormones and inflammation signals% in response to negative emotions.
+\1 %The  body's internal environment (cells) 
+altering epigenetic control in gene regulation and mRNA expression of cells
+%Over a long time, the tissue/cells will be transformed into dysplasia and then 
+
+\1 carcinogenesis with help from known carcinogens
+\end{outline}
+
+\end{minipage}
 
 %%%\label{fig:figure5}
 \end{figure}
+\clearpage
 
 
-\section{Materials and Methods} % 4
+
+\begin{figure}[ht]
+
+\begin{minipage}[c]{0.50\linewidth}
+%\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,center},capbesidewidth=.25\linewidth,capbesidesep=quad}}]{figure}[\FBwidth]
+%\centering
+
+\setlength{\unitlength}{.78cm}
+\begin{picture}(20, 10)(0,0) %(1,0.55038404)%
+%\centering
+  \put(0,0){\includegraphics[width=9.0cm]{Figure_5_holisticCare.pdf}}%
+  \put(0.4, 9.3){\fontfamily{qcr}\selectfont
+  \textbf{[Physician]}}%
+  \put(6.0, 7.8){\fontfamily{qcr}\selectfont
+  HNSCC}
+\end{picture}
+%\includegraphics[width=10cm]{Figure_5_holisticCare.pdf}
+\end{minipage}
+\hfill
+\begin{minipage}[c]{0.45\linewidth}
+Holistic cancer care:  
+\begin{outline}
+\1 to support cancer patients' spiritual, emotional, physical, and socioeconomic needs
+\1 to give the physical care: medication therapy or surgery. 
+\1 therapeutic relationship (TR), the physicians' spiritual properties (empathy, sympathy, and compassion) will engage cancer patients
+\1 self-compassion to gain resilience against the disease through their mind--brain--body axis
+%Thus, we suggest that electric healthcare records (EHR) should include physical, pathological, and psychological data, and even more spiritual information. The \acrshort{tcga} might collect those "holistic features"  (\textcolor{green}{green} dashed line) for further study of personalized medicine.
+\end{outline}
+
+\end{minipage}
+
+%%%\label{fig:figure5}
+\end{figure}
+\clearpage
+
+%\section{Materials and Methods} % 4
 
 
-\subsection*{Patient Cohort} 
+%\subsection*{Patient Cohort} 
 
 
-\subsubsection*{RNA Sequencing Data} 
+%\subsubsection*{RNA Sequencing Data} 
 
 
-\subsubsection*{Clinical Data} 
+%\subsubsection*{Clinical Data} 
 
 
-\subsection{Cutoff Finder Core Engine}
+%\subsection{Cutoff Finder Core Engine}
 
 
-\subsection*{Statistical Consideration for Survival Analysis}
+%\subsection*{Statistical Consideration for Survival Analysis}
 
 
-\subsection*{Biomarker Selection and Validation}
+%\subsection*{Biomarker Selection and Validation}
 
 
 \section{Conclusions} % 5
-
+\begin{outline}
+\1 Three biomarker candidates---CAMK2N1, CALML5, and FCGBP---which are all heavily associated with the prognosis of \acrshort{os}.
+\1 The microenvironment of HNSCC, influenced by the mind--brain--body axis, requires further exploration and understanding using holistic multi-parametric approaches.
+\1 The patients trust those who take care of them and have the confidence to increase the capacity to recover from diseases through a mind--brain--body connection manner
+\1 The \acrshort{tcga} might collect those "holistic features" for further study of personalized medicine.
+\1 Since mindfulness meditation will be helpful in cancer healthcare, we continually educate our cancer patients that they should confess for not taking care of their bodies and spirits in the past, and give sincere thanks for their physical body's hard work.
+\end{outline}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
