Updates from Overleaf

--- a/keynote.tex
+++ b/keynote.tex
@@ -949,7 +949,7 @@ FCGBP &
 %The concept of holistic care for \acrshort{hnscc} patients. %MDPI: please confirm if the extra lines and frame need to be deleted.
 
 Beyond carcinogenesis\\
-the mind--brain--body axis
+the mind--brain--body axis~\cite{Hsiao2012}
 
 \begin{outline}
 \1 a stressful environment %(giant \textcolor{black}{black} arrow) 
@@ -959,7 +959,7 @@ will trigger an emotional response
 altering epigenetic control in gene regulation and mRNA expression of cells
 %Over a long time, the tissue/cells will be transformed into dysplasia and then 
 
-\1 carcinogenesis with help from known carcinogens
+\1 stress causes carcinogenesis~\cite{Lutgendorf2010,Powell2013,Iftikhar2021} with help from known carcinogens
 \end{outline}
 
 \end{minipage}
@@ -989,12 +989,12 @@ altering epigenetic control in gene regulation and mRNA expression of cells
 \end{minipage}
 \hfill
 \begin{minipage}[c]{0.45\linewidth}
-Holistic cancer care:  
+Holistic cancer care~\cite{Mehta2019,Iftikhar2021}:  
 \begin{outline}
 \1 to support cancer patients' spiritual, emotional, physical, and socioeconomic needs
 \1 to give the physical care: medication therapy or surgery. 
 \1 therapeutic relationship (TR), the physicians' spiritual properties (empathy, sympathy, and compassion) will engage cancer patients
-\1 self-compassion to gain resilience against the disease through their mind--brain--body axis
+\1 self-compassion to gain resilience against the disease through their mind--brain--body axis~\cite{Hsiao2012}
 %Thus, we suggest that electric healthcare records (EHR) should include physical, pathological, and psychological data, and even more spiritual information. The \acrshort{tcga} might collect those "holistic features"  (\textcolor{green}{green} dashed line) for further study of personalized medicine.
 \end{outline}
 
@@ -1027,14 +1027,30 @@ Holistic cancer care:
 
 \section{Conclusions} % 5
 \begin{outline}
-\1 Three biomarker candidates---CAMK2N1, CALML5, and FCGBP---which are all heavily associated with the prognosis of \acrshort{os}.
-\1 The microenvironment of HNSCC, influenced by the mind--brain--body axis, requires further exploration and understanding using holistic multi-parametric approaches.
-\1 The patients trust those who take care of them and have the confidence to increase the capacity to recover from diseases through a mind--brain--body connection manner
-\1 The \acrshort{tcga} might collect those "holistic features" for further study of personalized medicine.
-\1 Since mindfulness meditation will be helpful in cancer healthcare, we continually educate our cancer patients that they should confess for not taking care of their bodies and spirits in the past, and give sincere thanks for their physical body's hard work.
+\1 Three biomarker candidates---CAMK2N1, CALML5, and FCGBP---which are all heavily associated with the prognosis of \acrlong{os}.
+\1 The microenvironment of HNSCC, influenced by the mind--brain--body axis~\cite{Hsiao2012}
+    \2 further exploration and understanding using holistic multi-parametric approaches
+    \2 the \acrshort{tcga} must collect those "holistic features" for further study of personalized medicine
+\1 Good using placebo effect
+    \2 the confidence might promote healing through a mind--brain--body connection manner
+\1 Mindfulness meditation is helpful to cancer patients
+    \2 confess for not taking care of their bodies and spirits in the past
+    \2 give sincere thanks for their physical body's hard work
 \end{outline}
 
-
+%人俯仰於天地之間
+%順從四季氣候變化
+%保養正氣陶冶性情
+%自我療癒身心靈疾病
+%自他不二 心存正念 向內看，解決苦之源
+%1.衷心懺悔
+%2.真心感謝
+%3.誠意祝福
+%4.永存善念 慈悲
+%5.心無恐懼: 情志養生
+%每位醫師都可以成為「創傷知情者」幫助我們身邊的病患，懂他的心靈創傷，讓他有安全感， 才有機會改變疾病的走向
+%"每一位患者都有自癒能力， 我們知情之後， 也要逐步讓他本人知情， 看見之後， 在良好的「治療關係」中， 協助他們漸漸找回自己的療癒。（以他們自己的腳步）"
+%解說：患者的自癒力就是復原力（resilience),  強調「治療關係」（安全、 信任、 分享權力、 自決） 以及”知情”(暸解過往創傷經驗對自身的影響，進而開始療癒的過程）的重要性。
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \clearpage
 %%%%%%%
