Updates from Overleaf

--- a/keynote.tex
+++ b/keynote.tex
@@ -952,14 +952,13 @@ Beyond carcinogenesis\\
 the mind--brain--body axis~\cite{Hsiao2012}
 
 \begin{outline}
-\1 a stressful environment %(giant \textcolor{black}{black} arrow) 
+\1 stress %ful environment(giant \textcolor{black}{black} arrow) 
 will trigger an emotional response
 \1 brain releases stress hormones and inflammation signals% in response to negative emotions.
 \1 %The  body's internal environment (cells) 
 altering epigenetic control in gene regulation and mRNA expression of cells
 %Over a long time, the tissue/cells will be transformed into dysplasia and then 
-
-\1 stress causes carcinogenesis~\cite{Lutgendorf2010,Powell2013,Iftikhar2021} with help from known carcinogens
+\1 carcinogenesis~\cite{Lutgendorf2010,Powell2013,Iftikhar2021} with help from known carcinogens
 \end{outline}
 
 \end{minipage}
@@ -993,8 +992,8 @@ Holistic cancer care~\cite{Mehta2019,Iftikhar2021}:
 \begin{outline}
 \1 to support cancer patients' spiritual, emotional, physical, and socioeconomic needs
 \1 to give the physical care: medication therapy or surgery. 
-\1 therapeutic relationship (TR), the physicians' spiritual properties (empathy, sympathy, and compassion) will engage cancer patients
-\1 self-compassion to gain resilience against the disease through their mind--brain--body axis~\cite{Hsiao2012}
+\1 therapeutic relationship (TR)~\cite{Rogers1979}, the physicians' spiritual properties (empathy, sympathy, and compassion) will engage cancer patients
+\1 to induce their self-compassion to gain resilience against the disease through their mind--brain--body axis~\cite{Hsiao2012}
 %Thus, we suggest that electric healthcare records (EHR) should include physical, pathological, and psychological data, and even more spiritual information. The \acrshort{tcga} might collect those "holistic features"  (\textcolor{green}{green} dashed line) for further study of personalized medicine.
 \end{outline}
 
