Updates from Overleaf

--- a/keynote.tex
+++ b/keynote.tex
@@ -400,9 +400,17 @@ parskip=half-, % Paragraphs separated by half a line
   \myuni\par
   \vfill
 \end{flushright}
-Chi, L.-H., Wu, A. T. H., Hsiao, M. \& Li, Y.-C. (Jack). A Transcriptomic Analysis of Head and Neck Squamous Cell Carcinomas for Prognostic Indications. J. Pers. Med. 11, 782 (2021).
+Chi, L.-H., Wu, A. T. H., Hsiao, M. \& Li, Y.-C. (Jack). Journal of Personalized Medicine, 11, 782 (2021).
 %\cite{Chi2021}
 
+\clearpage
+
+\begin{figure}
+    \centering
+    \includegraphics[width=16cm]{Article_Banner_MDPI_jpm-11-00782.pdf}
+%    \caption{Caption}
+%    \label{fig:my_label}
+\end{figure}
 \clearpage
 %----------------------------------------------------------------------------------------
 %	TABLE OF CONTENTS
