Updates from Overleaf

--- a/keynote.tex
+++ b/keynote.tex
@@ -556,6 +556,8 @@ The advantages of our workflow---pvalueTex:
 
 \section{Results}
 
+\thispagestyle{myheadings}
+\markright{Results\hfill \textit{p} value plots \hfill}
 
 
 \begin{figure}[ht]
