Updates from Overleaf

--- a/keynote.tex
+++ b/keynote.tex
@@ -408,6 +408,8 @@ parskip=half-, % Paragraphs separated by half a line
 %Chi, L.-H., Wu, A. T. H., Hsiao, M. \& Li, Y.-C. (Jack). Journal of Personalized Medicine, 11, 782 (2021).
 %\cite{Chi2021}
 
+\large \hspace{5cm} A Holistic Way for Cancer Care
+
 \clearpage
 
 \begin{figure}
@@ -707,7 +709,9 @@ $$h(t) = h_0(t) \times exp(\beta_1 X_1 + \beta_2 X_2 + \beta_3 X_3 + ... + \beta
 
 \section{Results}
 
-\thispagestyle{myheadings}
+\clearpage
+
+\thispagestyle{headings}
 \markright{Results\hfill \textit{p} value plots \hfill}
 
 
@@ -1169,11 +1173,25 @@ Holistic cancer care~\cite{Mehta2019,Iftikhar2021}:
 
 
 \section*{Conclusions} % 5
+\thispagestyle{headings}
+\markright{Conclusions \hfill Physical Care \hfill}
+
 \begin{outline}
 \1 Three biomarker candidates---CAMK2N1, CALML5, and FCGBP---which are all heavily associated with the prognosis of \acrlong{os}.
 \1 The microenvironment of HNSCC, influenced by the mind--brain--body axis~\cite{Hsiao2012}
     \2 further exploration and understanding using holistic multi-parametric approaches
     \2 the \acrshort{tcga} must collect those "holistic features" for further study of personalized medicine
+
+\end{outline}
+
+%
+\clearpage
+
+\thispagestyle{headings}
+\markright{Conclusions \hfill Spiritual Care \hfill}
+
+\begin{outline}
+
 \1 Good using placebo effect
     \2 the confidence might promote healing through a mind--brain--body connection manner
 \1 Mindfulness meditation is helpful to cancer patients
@@ -1197,7 +1215,7 @@ Holistic cancer care~\cite{Mehta2019,Iftikhar2021}:
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \clearpage
 %%%%%%%
-\thispagestyle{empty} % No slide header and footer
+\thispagestyle{headings} % No slide header and footer
 
 \bibliographystyle{unsrt}
 \bibliography{TCGA_margin_cutoff.bib}
